# bp-ed25519

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: ed25519-circuit.tex
python/: cubic.py  ed25519.py  verify_point_addition.py
sage/: cubic.sage  params.sage  verify_point_addition.sage
scratch/docs/: ed25519-circuit.tex
scratch/python/: ed25519.py  verify_point_addition.py
scratch/sage/: verify_point_addition.sage
src/: curve.rs  field.rs  lib.rs
src/nonnative/: circuit.rs  mod.rs  vanilla.rs
src/ref10/: fe.rs  mod.rs
