[package]
name = "fe25519-r1cs"
version = "0.1.0"
edition = "2021"

[dependencies]
bellperson = { version = "0.25.0", default-features = false }
crypto-bigint = "0.5.0"
ff = "0.13.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
subtle = "2.5.0"

[dev-dependencies]
pasta_curves = "0.5.1"
rand = "0.8.5"
rand_xorshift = "0.3.0"
